[project]
name = "llm-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "env>=0.1.0",
    "fastapi>=0.115.13",
    "ollama>=0.5.1",
    "openai>=1.91.0",
    "pillow>=11.2.1",
    "requests>=2.32.4",
    "tiktoken>=0.9.0",
]
